@@ -1,6 +1,6 @@
 dnl Process this file with Autoconf to produce a configure script for Web2c.
 dnl
-dnl   Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
+dnl   Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
 dnl   gives unlimited permission to copy and/or distribute it,
@@ -28,9 +28,12 @@ KPSE_COMMON([web2c convert])
 AC_PROG_YACC
 KPSE_PROG_LEX
 
-AC_CHECK_SIZEOF([int])
 AC_CHECK_FUNCS([strerror])
 AC_CHECK_HEADERS([errno.h])
+AC_CHECK_SIZEOF([int])
+AC_CHECK_SIZEOF([long])
+AC_CHECK_SIZEOF([void *])
+AC_TYPE_UINTPTR_T
 
 dnl Write output here, instead of putting a zillion -D's on the command line.
 AC_CONFIG_HEADERS([kpathsea/c-auto.h:c-auto.in])
